# tasknote-mono

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  tasknote.conf  tasknote_uwsgi.ini
core/: urls.py
core/settings/: __init__.py  apps.py  auth.py  base.py  database.py  logging.py  middleware.py  security.py  static.py  templates.py
modules/authentication/: apps.py
modules/authentication/src/presentation/: urls.py
modules/authentication/tests/: conftest.py
modules/authentication/tests/factories/: user_factory.py
modules/authentication/tests/test_forms/: test_user_creation_form.py
modules/authentication/tests/test_models/: test_user.py
modules/authentication/tests/test_views/: test_login_view.py  test_logout_view.py  test_registration_view.py
modules/authentication/tests/utils/: __init__.py  create_user.py  selenium_client.py
modules/global_app/: apps.py
modules/global_app/tests/test_middlewares/: test_rate_limit.py
modules/tasks/: apps.py
modules/tasks/src/presentation/: urls.py
modules/tasks/tests/: __init__.py  conftest.py
modules/tasks/tests/factories/: __init__.py  task_factory.py
modules/tasks/tests/test_models/: test_task.py
modules/tasks/tests/test_views/: test_daily_task_list_view.py  test_task_create_view.py  test_task_list_view.py
modules/tasks/tests/utils/: __init__.py  create_task.py  get_default_user_id.py
modules/theme/static_src/: package.json  tailwind.config.js
modules/theme/static_src/src/: styles.css
(+111 files in other folders)
